# erebus

./: README.md  pyproject.toml
.github/workflows/: pyright.yaml  test.yaml
erebus/: __init__.py  __main__.py  unwrap.py
erebus/deobfuscator/: deobfuscator.py  transformers.py  unwrapper.py
tests/: test_all.py
tests/examples/: obfuscated.py
