[tool.poetry]
name = "erebus"
version = "0.1.0"
description = "A free and open source Hyperion deobfuscator"
authors = ["teaishealthy <teaishealthy@protonmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
