[tool.poetry]
name = "erebus"
version = "0.1.0"
description = "A free and open source Hyperion deobfuscator"
authors = ["teaishealthy <teaishealthy@protonmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
pyright = "^1.1.276"

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
